add scenary spot controller
